# django-create-fake-model-object

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
create_fake_model_object/management/commands/: createrandom.py
