[metadata]
name = django-create-fake-model-object
version = 0.0.5
author = cwadven
author_email = cwadven@naver.com
maintainer = cwadven
description = Create Fake Model Object
long_description = file:README.rst
url = https://github.com/cwadven/django-create-fake-model-object
license = MIT
keywords = django random
classifiers =
        Environment :: Web Environment
        Framework :: Django
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find: